# logict

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.haskell-ci  changelog.md  logict.cabal
.github/workflows/: haskell-ci.yml
Control/Monad/: Logic.hs
Control/Monad/Logic/: Class.hs
example/: grandparents.hs
test/: Test.hs  TestRebindableSyntax.hs
