name: logict
version: 0.8.0.0
license: BSD3
license-file: LICENSE
copyright:
  (c) 2007-2014 Dan Doel,
  (c) 2011-2013 Edward Kmett,
  (c) 2014      Roman Cheplyaka,
  (c) 2020-2021 Andrew Lelechenko,
  (c) 2020-2021 Kevin Quick
maintainer: Andrew Lelechenko <andrew.lelechenko@gmail.com>
author: Dan Doel
homepage: https://github.com/Bodigrim/logict#readme
synopsis: A backtracking logic-programming monad.
description:
  Adapted from the paper
  <http://okmij.org/ftp/papers/LogicT.pdf Backtracking, Interleaving, and Terminating Monad Transformers>
  by Oleg Kiselyov, Chung-chieh Shan, Daniel P. Friedman, Amr Sabry.
category: Control
build-type: Simple
extra-source-files:
  changelog.md
  README.md
cabal-version: >=1.10
tested-with: GHC ==7.0.4 GHC ==7.2.2 GHC ==7.4.2 GHC ==7.6.3 GHC ==7.8.4 GHC ==7.10.3 GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.4 GHC ==8.10.7 GHC ==9.0.2 GHC ==9.2.2

source-repository head
  type: git
  location: https://github.com/Bodigrim/logict

library
  exposed-modules:
    Control.Monad.Logic
    Control.Monad.Logic.Class
  default-language: Haskell2010

  ghc-options: -O2 -Wall
  if impl(ghc >= 8.0)
    ghc-options:    -Wcompat

  build-depends:
    base >=4.3 && <5,
    mtl >=2.0 && <2.4

  if impl(ghc <8.0)
    build-depends:
      fail, transformers

executable grandparents
  buildable: False
  main-is: grandparents.hs
  hs-source-dirs: example
  default-language: Haskell2010
  build-depends:
    base,
    logict

test-suite logict-tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  default-language: Haskell2010

  ghc-options: -Wall
  if impl(ghc >= 8.0)
    ghc-options:    -Wcompat -Wno-incomplete-uni-patterns

  build-depends:
    base,
    async >=2.0,
    logict,
    mtl,
    tasty,
    tasty-hunit

  hs-source-dirs: test
